修复 linux 下 system 不能正常工作的问题，增加 CMD，修复编码问题，统一换行符为 LF，移除不好管理的 PrintStream 使用，PS -> PWSH