@@ -1,15 +1,17 @@
 package jtool.system;
 
-
 import jtool.code.UT;
+import jtool.code.collection.NewCollections;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.concurrent.*;
 
-import static jtool.code.CS.SYNC_SLEEP_TIME;
+import static jtool.code.CS.*;
 
 /**
  * @author liqa
@@ -17,6 +19,10 @@ import static jtool.code.CS.SYNC_SLEEP_TIME;
  */
 public class LocalSystemExecutor extends AbstractSystemExecutor {
     public LocalSystemExecutor() {super();}
+    
+    /** stuff to override */
+    protected String @NotNull[] programAndArgs_() {return ZL_STR;}
+    protected Charset charset_() {return StandardCharsets.UTF_8;}
     
     /** 本地则在本地创建目录即可 */
     @Override public final void validPath(String aPath) throws IOException {UT.IO.validPath(aPath);}
@@ -26,8 +32,11 @@ public class LocalSystemExecutor extends AbstractSystemExecutor {
     @Override public final boolean isFile(String aFilePath) {return UT.IO.isFile(aFilePath);}
     @Override public final boolean isDir(String aDir) {return UT.IO.isDir(aDir);}
     
-    @Override protected Future<Integer> submitSystem__(String aCommand, @NotNull IPrintlnSupplier aPrintln) {
-        return new LocalSystemFuture(aCommand, aPrintln);
+    @Override protected Future<Integer> submitSystem__(String aCommand, @NotNull AbstractSystemExecutor.IWritelnSupplier aWriteln) {
+        // 对于空指令专门优化，不执行操作
+        if (aCommand == null || aCommand.isEmpty()) return SUC_FUTURE;
+        
+        return new LocalSystemFuture(aCommand, aWriteln);
     }
     
     private final class LocalSystemFuture implements Future<Integer> {
@@ -36,11 +45,17 @@ public class LocalSystemExecutor extends AbstractSystemExecutor {
         private final @Nullable Process mProcess;
         private final Future<Void> mErrTask, mOutTask;
         private volatile boolean mCancelled = false;
-        private LocalSystemFuture(String aCommand, final @NotNull IPrintlnSupplier aPrintln) {
+        private LocalSystemFuture(String aCommand, final @NotNull AbstractSystemExecutor.IWritelnSupplier aWriteln) {
             // 执行指令
             Process tProcess;
-            try {tProcess = Runtime.getRuntime().exec(aCommand);}
-            catch (Exception e) {printStackTrace(e); tProcess = null;}
+            try {
+                // 这里对于一般情况改为更加稳定的 processBuilder
+                String[] tProgramAndArgs = programAndArgs_();
+                String[] tCommands = tProgramAndArgs.length==0 ? UT.Texts.splitBlank(aCommand) : NewCollections.merge(tProgramAndArgs, aCommand);
+                tProcess = new ProcessBuilder(tCommands).start();
+            } catch (Exception e) {
+                printStackTrace(e); tProcess = null;
+            }
             mProcess = tProcess;
             if (mProcess == null) {
                 mErrTask = null;
@@ -50,7 +65,7 @@ public class LocalSystemExecutor extends AbstractSystemExecutor {
             // 使用另外两个线程读取错误流和输出流（由于内部会对输出自动 buffer，获取 stream 和执行的顺序不重要）
             mErrTask = UT.Par.runAsync(() -> {
                 boolean tERROutPut = !noERROutput();
-                try (BufferedReader tErrReader = UT.IO.toReader(mProcess.getErrorStream())) {
+                try (BufferedReader tErrReader = UT.IO.toReader(mProcess.getErrorStream(), charset_())) {
                     // 对于 Process，由于内部已经有 buffered 输出流，因此必须要获取输出流并遍历，避免发生流死锁
                     String tLine;
                     while ((tLine = tErrReader.readLine()) != null) {
@@ -63,11 +78,11 @@ public class LocalSystemExecutor extends AbstractSystemExecutor {
             // 读取执行的输出
             mOutTask = UT.Par.runAsync(() -> {
                 boolean tSTDOutPut = !noSTDOutput();
-                try (BufferedReader tOutReader = UT.IO.toReader(mProcess.getInputStream()); IPrintln tPrintln = tSTDOutPut ? aPrintln.get() : NUL_PRINTLN) {
+                try (BufferedReader tOutReader = UT.IO.toReader(mProcess.getInputStream(), charset_()); UT.IO.IWriteln tWriteln = tSTDOutPut ? aWriteln.get() : NUL_PRINTLN) {
                     // 对于 Process，由于内部已经有 buffered 输出流，因此必须要获取输出流并遍历，避免发生流死锁
                     String tLine;
                     while ((tLine = tOutReader.readLine()) != null) {
-                        if (tSTDOutPut) tPrintln.println(tLine);
+                        if (tSTDOutPut) tWriteln.writeln(tLine);
                     }
                 } catch (Exception e) {
                     printStackTrace(e);
